fixing margin bug on iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@ Total Page Rules
 html,
 body {
   font-family: Roboto, sans-serif;
+  width: 100%;
   height: 100%;
   background-color: #fff;
-  margin: 0 auto; }
-
-section {
-  width: 100%; }
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; }
 
 /***************
     Modal
